Fix font awesome arrow overlap

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -45,8 +45,7 @@ thead th.sortable:before {
     font-family: FontAwesome;
     text-decoration: inherit;
     position: absolute;
-    top: 8px;
-    right: 8px;
+    right: 0;
 }
 
 thead th.sortable.asc:before {
